Feat: getComponent methods for game object class